Bug 124173 - Non working dialog - Extras > Thesaurus...
Summary: Non working dialog - Extras > Thesaurus...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-18 15:28 UTC by Nicolas Christener
Modified: 2021-03-26 08:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-03-18 15:28:13 UTC
Description:
The thesaurus dialog doesn't show up in the iOS app.

Steps to Reproduce:
1. Create/open a document in the iOS app
2. Click the menu entry "Extras > Thesaurus ..."

Actual Results:
The thesaurus dialog doesn't show up.

Expected Results:
The thesaurus dialog should show up.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Aron Budea 2019-03-18 23:15:56 UTC
Confirmed. I believe this is primarily because no thesauri are bundled with the app, but in this case the menu should be disabled, and I believe will be disabled in the next build.

Patch for master:
https://gerrit.libreoffice.org/#/c/69264/

Nevertheless, it would be good to test this with an actual thesaurus.
Comment 2 Nicolas Christener 2019-03-19 06:34:09 UTC
We we're actually hoping to have the Thesaurus functionallity working.

So if possible don't just disable it, but add the word lists (and the dialog).

For my usecase, the following word list would be relevant:

* de_CH (most important)

* fr_FR

* en_GB (or en_US)
Comment 3 QA Administrators 2021-03-19 04:41:26 UTC Comment hidden (obsolete)
Comment 4 Nicolas Christener 2021-03-24 14:27:18 UTC
How complex is it nowadays to add this functionality?
Comment 5 How can I remove my account? 2021-03-24 15:03:48 UTC
I will look into this now.
Comment 6 How can I remove my account? 2021-03-24 16:33:16 UTC Comment hidden (off-topic)
Comment 7 How can I remove my account? 2021-03-24 17:04:14 UTC
Was easier than I feared. Suggested fix in https://gerrit.libreoffice.org/c/core/+/113066 .
Comment 8 Commit Notification 2021-03-25 08:07:50 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/89af24074e9adac4d005dcc322d81db09fc19f54

tdf#124173: Enable thesauruses in the iOS app

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Nicolas Christener 2021-03-26 08:40:42 UTC
Very nice!!

Tested in 6.4.8 (2) with German (Switzerland) words.

I think this issue can be closed.

Thanks a lot to the Collabora team and especially Tor for taking care of this!