tdf#124173: Enable thesauruses in the iOS app

Build our lnth library and the external mythes library. Install
thesauruses for the app's Xcode project to pick up and include in the
app bundle. Look for them in the place where they will end up.

To get thesauruses you need to configure with --with-myspell-dicts.

Change-Id: I2d850ca3c821c5c764cb061340a265440d04e41b