lingucomponent/Module_lingucomponent.mk
@@ -13,7 +13,7 @@ $(eval $(call gb_Module_Module,lingucomponent))
 $(eval $(call gb_Module_add_targets,lingucomponent,\
 	Library_guesslang \
 	Library_hyphen \
-	$(if $(filter-out iOS,$(OS)),Library_lnth) \
+	Library_lnth \
 	$(if $(filter iOS MACOSX,$(OS)),Library_MacOSXSpell) \
 	Library_spell \
 	StaticLibrary_ulingu \
