postprocess/Rdb_services.mk
@@ -94,9 +94,7 @@ $(eval $(call gb_Rdb_add_components,services,\
 	lingucomponent/source/hyphenator/hyphen/hyphen \
 	lingucomponent/source/languageguessing/guesslang \
 	lingucomponent/source/spellcheck/spell/spell \
-	$(if $(filter-out iOS,$(OS)), \
-		lingucomponent/source/thesaurus/libnth/lnth \
-	) \
+	lingucomponent/source/thesaurus/libnth/lnth \
 	lingucomponent/source/numbertext/numbertext \
 	linguistic/source/lng \
 	$(if $(ENABLE_LWP), \
